# CrossPlatformTriangleRendering

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/aengineer/crossplatformtrianglerendering/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/aengineer/crossplatformtrianglerendering/: MainActivity.kt  NativeRenderer.kt
app/src/main/java/com/aengineer/crossplatformtrianglerendering/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/aengineer/crossplatformtrianglerendering/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
shared/: CMakeLists.txt  CrossPlatformTriangleRendering-Bridging-Header.h  OpenGl.cpp  ViewController.swift  Wrapper.h  Wrapper.m  main_lib.cpp  main_lib.h  metal_shader.cpp  metal_shader.h  metal_utills.cpp  metal_utills.h  native-lib.cpp  native-lib.h  opengl_shader.cpp  opengl_shader.h  opengl_utils.cpp  opengl_utils.h
shared/metal-cpp/Foundation/: NSObject.hpp  NSTypes.hpp
